--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
                 }
             );
 
+            MissionCache.svgRootTag = svgRootTag;
+
             await new Promise(res => setTimeout(res, 100));
 
             MissionCache.allPages =
