--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <script src="./aijs.build4.js"></script>
     <script src="./gameSet.js"></script>
     <script src="./updateAction.js"></script>
+    <script src="./pageTransition.js"></script>
     <script src="./updateTransition.js"></script>
     <script src="./audio.js"></script>
     <script>
