--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     <button id="fsBut" onclick="fS()">Full Screen</button>
     <div id="container"></div>
 
-    <script src="./aijs.build4.js"></script>
-    <script src="./gameSet.js"></script>
-    <script src="./updateAction.js"></script>
-    <script src="./pageTransition.js"></script>
-    <script src="./updateTransition.js"></script>
-    <script src="./audio.js"></script>
+    <script src="./lib/aijs.build4.js"></script>
+    <script src="./lib/gameSet.js"></script>
+    <script src="./lib/updateAction.js"></script>
+    <script src="./lib/pageTransition.js"></script>
+    <script src="./lib/updateTransition.js"></script>
+    <script src="./lib/audio.js"></script>
     <script>
         // remove log
         console.log('add "?log" after url for showing logs.');
