--- a/index.html
+++ b/index.html
@@ -17,13 +17,6 @@
             width: 100%;
             height: 100%;
         }
-
-        #fsBut {
-            position: fixed;
-            bottom: 0;
-            right: 0;
-            z-index: 999999;
-        }
     </style>
 
     <meta charset="utf-8">
@@ -32,89 +25,94 @@
 
 <body>
 
-    <button id="fsBut" onclick="fS()">Full Screen</button>
     <div id="container"></div>
 
-    <script src="./lib/pageConfig.js"></script>
     <script src="./lib/aijs.build4.js"></script>
-    <script src="./lib/audio.js"></script>
-    <script src="./lib/gameSet.js"></script>
-    <script src="./lib/updateNav.js"></script>
-    <script src="./lib/updateAction.js"></script>
-    <script src="./lib/updateTransition.js"></script>
+    <script src="./_lib/InitSvgText.js"></script>
+    <script src="./_lib/InitSvgView.js"></script>
+    <script src="./_lib/InitAudio.js"></script>
+    <script src="./_lib/InsertPageConfiguration.js"></script>
+    <script src="./_lib/InitPages.js"></script>
+    <script src="./_lib/SubtitleInteractiveByTransformer.js"></script>
+    <script src="./_lib/InitPagingNav.js"></script>
+    <script src="./_lib/InitAction.js"></script>
+    <script src="./_lib/UpdateNavElement.js"></script>
+    <script src="./_lib/UpdateTransition.js"></script>
+    <script src="./_lib/GameSet.js"></script>
+
+
+    <!-- <script src="./lib/pageConfig.js"></script> -->
+    <!-- <script src="./lib/audio.js"></script> -->
+    <!-- <script src="./lib/gameSet.js"></script> -->
+    <!-- <script src="./lib/updateNav.js"></script> -->
+    <!-- <script src="./lib/updateAction.js"></script> -->
+    <!-- <script src="./lib/updateTransition.js"></script> -->
 
     <script>
-        // remove log
-
-        const MissionCache = {
-            allPages: [],
-            namedObj: {},
-            gameSet: [],
-            playOns: [],
-            actElement: [],
-            navElements: [],
-            pageChanger: [],
-            transitioner: [],
-            foreignThings: [],
-            allInteractive: [],
-        };
+        window.AiGUI = {};
 
         const start = async () => {
+
+            // hide container
             document.getElementById('container').style.opacity = 0;
 
-            let svgText;
-            if (!window.location.search.includes('default')) svgText = await (await fetch('./target/index.svg')).text();
-            else svgText = await (await fetch('./svg/index.svg')).text();
+            await InitSvgText(document.getElementById('container'));
+            await InitSvgView();
+            await InitAudio();
 
-            svgText = svgText
-                .replace(/_x21_/g, '!')
-                .replace(/_x40_/g, '@')
-                .replace(/_x23_/g, '#')
-                .replace(/_x24_/g, '$')
-                .replace(/_x25_/g, '%')
-                .replace(/_x5E_/g, '^')
-                .replace(/_x26_/g, '&')
-                .replace(/_x2A_/g, '*')
-                .replace(/_x28_/g, '(')
-                .replace(/_x29_/g, ')')
-                .replace(/_x2D_/g, '-')
-                .replace(/_x5F_/g, '_')
-                .replace(/_x2B_/g, '+')
-                .replace(/_x3D_/g, '=')
-                .replace(/_x2C_/g, ',')
-                .replace(/<\?xml(.*?)>/g, '')
-                .replace(/<!--(.*?)-->/g, '')
-                .replace(
-                    /xlink\:href\=\"/g,
-                    window.location.search.includes('default')
-                        ? 'xlink:href="./svg/'
-                        : 'xlink:href="./target/'
-                );
-            // console.log(svgText);
-            document.getElementById('container').innerHTML = svgText;
+            const laterUpdateTransition = await InsertPageConfiguration();
 
-            initPages();
+            await InitPages();
+            await SubtitleInteractiveByTransformer();
+            await InitPagingNav();
+            await InitAction();
+            await UpdateNavElement();
+
+            // add game set functionality
+            GameSet.init();
+
+            // preload image
+            if (document.querySelector('image')) {
+                await new Promise(res => {
+                    AiJs
+                        .Library
+                        .LoadImageSrc(
+                            AiGUI.SvgRootTag,
+                            {
+                                xLinked: true,
+                                removeSrc: true,
+                                loadedNum: per => { if (per > 0.95) res(); }
+                            }
+                        );
+                });
+            }
+
+            await new Promise(res => setTimeout(res, 50));
+
+            // show container
+            document.getElementById('container').style.transition = 'all 0.4s linear';
+            document.getElementById('container').style.opacity = 1;
+
+            // update in::transition element transition
+            await UpdateTransition();
+
+            // arrange page position
+            window.AiGUI.ChangePage(true);
+
+            laterUpdateTransition();
         };
 
 
         // =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 
 
-        let svgRootTag,
-            theView;
+
 
         const initPages = async () => {
 
             await AudioInit();
 
-            svgRootTag = document.querySelector('svg');
-            theView = new AiJs.View(
-                svgRootTag,
-                {
-                    isMobile: true,
-                    isHorizontal: true,
-                }
-            );
+
 
             MissionCache.svgRootTag = svgRootTag;
 
@@ -302,21 +300,6 @@
 
             // console.log('MissionCache', MissionCache);
         };
-
-
-        // =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
-
-
-        function fS() {
-            const b = document.body;
-            if (b.requestFullscreen) {
-                b.requestFullscreen();
-            } else if (b.webkitRequestFullscreen) { /* Safari */
-                b.webkitRequestFullscreen();
-            } else if (b.msRequestFullscreen) { /* IE11 */
-                b.msRequestFullscreen();
-            }
-        }
 
 
         // =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
