--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div id="container"></div>
 
-    <script src="./lib/aijs.build4.js"></script>
+    <script src="./_lib/aijs.build4.js"></script>
     <script src="./_lib/InitSvgText.js"></script>
     <script src="./_lib/InitSvgView.js"></script>
     <script src="./_lib/InitAudio.js"></script>
