--- a/redirect.html
+++ b/redirect.html
@@ -58,4 +58,5 @@
 
 </pre>
 <hr />
-<a href="./svg/svg.zip" download="">Example svg.ai</a>
+<a href="./downloadable/designer.command" download="">Exe command</a>
+<a href="./downloadable/svg.zip" download="">Example svg.ai</a>
