--- a/redirect.html
+++ b/redirect.html
@@ -1,5 +1,5 @@
 <div style="display: flex;">
-    <input type="text" style="width: 100%;" id="theText" value="http://localhost:7070/svg/sample1" />
+    <input type="text" style="width: 100%;" id="theText" value="http://192.168.0.63:7070/svg/sample1" />
     <button onclick="go()">Go</button>
 </div>
 <script>
