--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             // add game set functionality
             GameSet.init();
 
-            // if (!window.location.search.includes('nopreload'))
-            //     await PreloadImage();
+            if (!window.location.search.includes('nopreload'))
+                await PreloadImage();
 
             await new Promise(res => setTimeout(res, 50));
 
