asset and instruction updated

--- a/redirect.html
+++ b/redirect.html
@@ -63,5 +63,12 @@
 
 </pre>
 <hr />
-<a href="./downloadable/designer.command" download="">Exe command</a>
-<a href="./downloadable/svg.zip" download="">Example svg.ai</a>
+<a href="./downloadable/svg.zip" download="">Example svg.ai</a><br />
+<hr />
+<a href="https://chrome.google.com/webstore/detail/web-server-for-chrome/ofhbbkphhbklhfoeikjpcbhemlocgigb">Add tester</a>
+<ol>
+    <li>Check "set cors header" in Show Advanced Option</li>
+    <li>Choose folder with folder which contains index.svg</li>
+    <li>Copy the "Web server url(s) in to the input field at top of this page"</li>
+    <li>Better be test in development mobile mode, "command+shift+I" in MacOS</li>
+</ol>
